@@ -2034,11 +2034,6 @@ command to generate the output files.
     </magic>
     <glob pattern="*.so"/>
   </mime-type>
-  <mime-type type="application/x-srt">
-    <sub-class-of type="text/plain"/>
-    <_comment>subtitle file</_comment>
-    <glob pattern="*.srt"/>
-  </mime-type>
   <mime-type type="application/x-shellscript">
     <sub-class-of type="application/x-executable"/>
     <sub-class-of type="text/plain"/>
@@ -2094,6 +2089,17 @@ command to generate the output files.
       <match type="string" value="StuffIt " offset="0"/>
       <match type="string" value="SIT!" offset="0"/>
     </magic>
+  </mime-type>
+  <mime-type type="application/x-subrip">
+    <alias type="application/x-srt"/>
+    <sub-class-of type="text/plain"/>
+    <_comment>SubRip subtitles</_comment>
+    <magic priority="50">
+      <match type="string" value="1" offset="0">
+        <match type="string" value=" --> " offset="0:256"/>
+      </match>
+    </magic>
+    <glob pattern="*.srt"/>
   </mime-type>
   <mime-type type="application/x-sv4cpio">
     <_comment>SV4 CPIO archive</_comment>
