@@ -45,6 +45,7 @@ stream.sdp application/sdp x
 playlist.asx audio/x-ms-asx
 feed.rss application/rss+xml
 feed.atom application/atom+xml
+subtitle.srt application/x-subrip
 
 # text
 text-iso8859-15.txt text/plain ox
