@@ -1,0 +1,9 @@
+1
+00:00:24,500 --> 00:00:28,500
+Ki Christina Walters?
+
+2
+00:00:28,527 --> 00:00:30,155
+Christina Walters?
+
+
