@@ -1,5 +1,11 @@
 2007-09-04  Bastien Nocera  <hadess@hadess.net>
 
+	* freedesktop.org.xml.in: Fix the subrip mime-type to mention subrip,
+	add magic, patch by Osmo Salomaa <otsaloma@cc.hut.fi>
+	* tests/*: add a SubRip subtitle test
+
+2007-09-04  Bastien Nocera  <hadess@hadess.net>
+
 	* freedesktop.org.xml.in: Add the Atom mime-type, add magic to the RSS
 	mime-type
 	* tests/*: add RSS and Atom test cases
